force-app/main/default/objects/MemoRequestItem__c/MemoRequestItem__c.object-meta.xml
<CustomObject>
    <label>Memo Request Item</label>
    <nameField>
        <displayFormat>MRI-{000000}</displayFormat>
        <label>Memo Request Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Memo Request Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>