force-app/main/default/objects/MemoRequestItem__c/fields/ERPProcessingStatus__c.field-meta.xml
<CustomField>
    <fullName>ERPProcessingStatus__c</fullName>
    <label>ERP Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>