force-app/main/default/objects/MemoRequestItem__c/fields/InvoiceLine__c.field-meta.xml
<CustomField>
    <fullName>InvoiceLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Invoice line this item refers to. Preferred source line.</inlineHelpText>
    <label>Invoice Line</label>
    <referenceTo>InvoiceLine</referenceTo>
    <relationshipLabel>Memo Request Items</relationshipLabel>
    <relationshipName>Memo_Request_Items</relationshipName>
    <type>Lookup</type>
</CustomField>