force-app/main/default/objects/MemoRequestItem__c/fields/ItemNetWeight__c.field-meta.xml
<CustomField>
    <fullName>ItemNetWeight__c</fullName>
    <label>Item Net Weight</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>