force-app/main/default/objects/MemoRequestItem__c/fields/ItemNumber__c.field-meta.xml
<CustomField>
    <fullName>ItemNumber__c</fullName>
    <inlineHelpText>Item number in the ERP request (10, 20, 30 …). Assigned when saving.</inlineHelpText>
    <label>Item Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>