force-app/main/default/objects/MemoRequestItem__c/fields/ItemVolumeUnit__c.field-meta.xml
<CustomField>
    <fullName>ItemVolumeUnit__c</fullName>
    <label>Item Volume Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>