force-app/main/default/objects/MemoRequestItem__c/fields/MemoRequest__c.field-meta.xml
<CustomField>
    <fullName>MemoRequest__c</fullName>
    <inlineHelpText>The request this item belongs to.</inlineHelpText>
    <label>Memo Request</label>
    <referenceTo>MemoRequest__c</referenceTo>
    <relationshipLabel>Memo Request Items</relationshipLabel>
    <relationshipName>MemoRequestItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>