force-app/main/default/objects/MemoRequestItem__c/fields/OrderItem__c.field-meta.xml
<CustomField>
    <fullName>OrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Order product this item refers to.</inlineHelpText>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Memo Request Items</relationshipLabel>
    <relationshipName>MemoRequestItems</relationshipName>
    <type>Lookup</type>
</CustomField>