force-app/main/default/objects/MemoRequestItem__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Product of the item. Required for credit memo items.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Memo Request Items</relationshipLabel>
    <relationshipName>MemoRequestItems</relationshipName>
    <type>Lookup</type>
</CustomField>