force-app/main/default/objects/MemoRequestItem__c/fields/RequestedQuantity__c.field-meta.xml
<CustomField>
    <fullName>RequestedQuantity__c</fullName>
    <inlineHelpText>Quantity of the item. Must be greater than zero.</inlineHelpText>
    <label>Requested Quantity</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>