force-app/main/default/objects/MemoRequestItem__c/fields/ReturnOrderLineItem__c.field-meta.xml
<CustomField>
    <fullName>ReturnOrderLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Return order line this item was created from.</inlineHelpText>
    <label>Return Order Line Item</label>
    <referenceTo>ReturnOrderLineItem</referenceTo>
    <relationshipLabel>Memo Request Items</relationshipLabel>
    <relationshipName>MemoRequestItems</relationshipName>
    <type>Lookup</type>
</CustomField>