force-app/main/default/objects/MemoRequestItem__c/fields/WeightUnit__c.field-meta.xml
<CustomField>
    <fullName>WeightUnit__c</fullName>
    <inlineHelpText>Unit of the quantity, as ERP unit code.</inlineHelpText>
    <label>Weight Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WeightUnit</valueSetName>
    </valueSet>
</CustomField>