force-app/main/default/objects/MemoRequestItem__c/validationRules/MemoRequestItemCreditNeedsProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>MemoRequestItemCreditNeedsProduct</fullName>
    <active>true</active>
    <description>Credit memo items require a product.</description>
    <errorConditionFormula>AND(
  MemoRequest__r.MemoCategory__c = &quot;CREDIT&quot;,
  ISBLANK(Product2__c)
)</errorConditionFormula>
    <errorDisplayField>Product2__c</errorDisplayField>
    <errorMessage>A product is required for credit memo items.</errorMessage>
</ValidationRule>