force-app/main/default/objects/MemoRequestItem__c/validationRules/MemoRequestItemQuantityPositive.validationRule-meta.xml
<ValidationRule>
    <fullName>MemoRequestItemQuantityPositive</fullName>
    <active>true</active>
    <description>Quantity must be greater than zero.</description>
    <errorConditionFormula>RequestedQuantity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>RequestedQuantity__c</errorDisplayField>
    <errorMessage>Quantity must be greater than zero.</errorMessage>
</ValidationRule>