force-app/main/default/objects/MemoRequestItem__c/validationRules/MemoRequestItemSourceExclusive.validationRule-meta.xml
<ValidationRule>
    <fullName>MemoRequestItemSourceExclusive</fullName>
    <active>true</active>
    <description>At most one source line (invoice line, order product or return order line) may be linked.</description>
    <errorConditionFormula>(
  IF(ISBLANK(InvoiceLine__c), 0, 1)
  + IF(ISBLANK(OrderItem__c), 0, 1)
  + IF(ISBLANK(ReturnOrderLineItem__c), 0, 1)
) &gt; 1</errorConditionFormula>
    <errorMessage>Link at most one source line.</errorMessage>
</ValidationRule>